# buzzed-trivia-api

./: .gitignore  README.md
.github/workflows/: deploy_api.yml
Host Machine Config/: api.service  buzzed_trivia.com
buzzedTrivia/: setup.py
buzzedTrivia/flaskr/: __init__.py  app.py
buzzedTrivia/flaskr/models/: question.py
buzzed_trivia/: pyproject.toml
buzzed_trivia/buzzed_trivia/: app.py
buzzed_trivia/buzzed_trivia/auth/: login.py
buzzed_trivia/buzzed_trivia/models/: GameSession.py  Question.py
buzzed_trivia/buzzed_trivia/utils/: QuestionType.py
