[tool.poetry]
name = "buzzed-trivia"
version = "0.1.0"
description = ""
authors = ["adambaldwin <abaldwinva98@gmail.com>"]
readme = "README.md"
packages = [{include = "buzzed_trivia"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
